--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -1,10 +1,15 @@
+html  {   
+    background: url(../images/gl-laying-down.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+}
 body {
     background-color: white;
-}
-header  {
+}   
+nav {
     display: flex;
-    height: auto;
-}
-header img {
-    width: 100%;
+    height: 100px;
+    background-color: thistle;
+    display: block;
 }
