--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     transition: top .6s;
-    background: rgba(0,0,0,0.6);
+    background: rgba(2, 2, 2, 0.6);
     padding: 10px;
     overflow: hidden;
 }
@@ -77,5 +77,5 @@ p::first-letter {
 }
 .nav-wrapper.sticky {
     top: 0;
-    z-index: 99;
+    z-index: 100;
 }
