--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -9,7 +9,7 @@ body {
 -------------------------------------------------*/
 .banner-wrapper {
     height: 100vh;
-    background-image: url(../images/gl-laying-down.jpg);
+    background-image: url(../images/music/gl-laying-down.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -84,11 +84,7 @@ body {
     left: -.2em;
     color: crimson;
 }
-.bio {
-    max-width: 1000px;
-    margin: 100px auto 0;
-}
-.bio h2 {
+#info-headline {
     font-size: 60px;
     font-family:  bignoodletitling;
     text-align: center;
@@ -105,3 +101,26 @@ p::first-letter {
     color: crimson;
 }
 */
+#info-flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.info {
+    width: 40%;
+    height: auto;
+    background-color: floralwhite;
+    margin-bottom: 4em;
+    flex: 0 1 auto;
+    text-align: center;
+    
+}
+.info img {
+    width: 100%;
+}
+.info p {
+    font-family: poppins;
+    font-size: 24px;
+    line-height: 1.8;
+}
