--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -85,7 +85,7 @@ body {
     left: -.2em;
     color: crimson;
 }
-#info-headline {
+.section-headline {
     font-size: 60px;
     font-family:  bignoodletitling;
     text-align: center;
@@ -102,19 +102,79 @@ p::first-letter {
     color: crimson;
 }
 */
-#info-flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+#info-grid-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: auto auto auto auto auto auto auto;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.5em;
+    line-height: 1.5em;
 }
+#info-grid-container h2 {
+    text-align: center;
+    font-size: 60px;
+    color: crimson;
+}
+#info-grid-container img { 
+    max-width: 100%; 
+    box-shadow: 10px 5px 5px gray;
+}
+#music-heading {
+    grid-row: 1 / 2;
+    grid-column: 1 / 9;
+}
+#stair-img {
+   grid-row: 2 / 3;
+   grid-column: 1 / 5;
+   justify-self: center;
+}
+#music-tease {
+    grid-row: 2 / 3;
+    grid-column: 5 / 9;
+    justify-self: center;
+    align-self: center;
+    padding: 0 2em 0 2em;
+}
+#farm-heading {
+    grid-row: 3 / 4;
+    grid-column: 1 / 9;
+}
+#farm-tease {
+    grid-row: 4 / 5;
+    grid-column: 1 / 5;
+    justify-self: center;
+    align-self: center;
+    padding: 0 2em 0 2em;
+}
+#farm-img {
+    grid-row: 4 / 5;
+    grid-column: 5 / 9;
+    justify-self: center;
+}
+#design-heading {
+    grid-row: 5 / 6;
+    grid-column: 1 / 9;
+}
+#prog-img {
+    grid-row: 6 / 7;
+    grid-column: 1 / 5;
+    justify-self: center;
+}
+#prog-tease {
+    grid-row: 6 / 7;
+    grid-column: 5 / 9;
+    justify-self: center;
+    align-self: center;
+    padding: 0 2em 0 2em;
+}
+
+
 .info {
     width: 40%;
     height: auto;
     background-color: floralwhite;
     margin-bottom: 4em;
-    flex: 0 1 auto;
-    text-align: center;
+   
     
 }
 .info img {
