--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -127,6 +127,15 @@ p::first-letter {
     box-shadow: 10px 5px 5px gray;
     opacity: .9;
 }
+.more-info {
+    text-decoration: none;
+    font-size: 1.25em;
+    color: rgb(110, 109, 109);
+    opacity: 0;
+}
+#article1-link {
+    opacity: 0;
+}
 #music-heading {
     grid-row: 1 / 2;
     grid-column: 1 / 9;
@@ -143,7 +152,6 @@ p::first-letter {
     align-self: center;
     padding: 0 2em 0 2em;
 }
-
 #design-heading {
     grid-row: 3 / 4;
     grid-column: 1 / 9;
