--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -200,7 +200,7 @@ p::first-letter {
 #music-page-container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto 300px auto;
     margin-top: 150px;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.5em;
@@ -249,6 +249,16 @@ video {
 /* ---------------------------------
     Styling for Stravinsky piano
 -----------------------------------*/
+#videoDiv {
+   grid-row: 5 / 6;
+   grid-column: 1 / 4;
+}
+#stravinsky-info {
+    grid-row: 5 / 6;
+    grid-column: 5 / 9; 
+}
+
+
 
 #slides {
     height: 175px;
