--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -200,7 +200,7 @@ p::first-letter {
 #music-page-container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: auto auto auto auto 300px auto;
+    grid-template-rows: auto auto auto auto auto auto 300px auto;
     margin-top: 150px;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.5em;
@@ -249,13 +249,29 @@ video {
 /* ---------------------------------
     Styling for Stravinsky piano
 -----------------------------------*/
+#article-heading {
+    grid-row: 5 / 6;
+    grid-column: 1 / 9;
+}
+#article-title {
+    grid-row: 6 / 7;
+    grid-column: 1 / 9;
+}
 #videoDiv {
-   grid-row: 5 / 6;
+   grid-row: 7 / 8;
    grid-column: 1 / 4;
 }
 #stravinsky-info {
-    grid-row: 5 / 6;
+    grid-row: 7 / 8;
     grid-column: 5 / 9; 
+}
+#view-options {
+    grid-row: 8 / 9;
+    grid-column: 1 / 4;
+    font-size: .75em;
+}
+#view-options ul {
+    list-style-type: none;
 }
 
 
