--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -435,6 +435,46 @@ img {
     align-self: center;
 }
 
+/* ---------------------------------
+
+    Farm page
+
+------------------------------------*/
+#farm-page-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: auto auto auto auto auto auto auto;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.5em;
+    line-height: 1.5;
+}
+h1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 9;
+    justify-self: center;
+    margin-top: 100px;
+}
+
+/* ---------------------------------
+
+    Contact page
+
+------------------------------------*/
+#contact-page-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: auto auto auto auto auto auto auto;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.5em;
+    line-height: 1.5;
+}
+h1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 9;
+    justify-self: center;
+    margin-top: 100px;
+}
+
 
 
 
