--- a/styles/styles0.css
+++ b/styles/styles0.css
@@ -506,6 +506,8 @@ h1 {
 #contact-form {
     grid-row: 3 / 4;
     grid-column: 1 / 9;
+    display: flex;
+    flex-direction: column;
     height: 200px;
 }
 
